# serializer version: 1
# name: test_extraction_parsed_snapshot[bigbluebutton-phase_2_framing_c_pass1-call0]
  dict({
    'references': list([
      dict({
        'component': 'HTML5 Client',
        'matched_text': 'HTML5 client',
        'sentence': 4,
      }),
      dict({
        'component': 'HTML5 Client',
        'matched_text': 'HTML5 client',
        'sentence': 5,
      }),
      dict({
        'component': 'HTML5 Client',
        'matched_text': 'HTML5 client',
        'sentence': 6,
      }),
      dict({
        'component': 'HTML5 Server',
        'matched_text': 'HTML5 server',
        'sentence': 8,
      }),
      dict({
        'component': 'HTML5 Server',
        'matched_text': 'HTML5 server',
        'sentence': 9,
      }),
      dict({
        'component': 'HTML5 Client',
        'matched_text': 'HTML5 client',
        'sentence': 14,
      }),
      dict({
        'component': 'HTML5 Server',
        'matched_text': 'HTML5 server',
        'sentence': 15,
      }),
      dict({
        'component': 'HTML5 Server',
        'matched_text': 'bbb-html5',
        'sentence': 19,
      }),
      dict({
        'component': 'HTML5 Server',
        'matched_text': 'bbb-html5',
        'sentence': 20,
      }),
      dict({
        'component': 'HTML5 Server',
        'matched_text': 'bbb-html5',
        'sentence': 21,
      }),
      dict({
        'component': 'Apps',
        'matched_text': 'akka-apps',
        'sentence': 26,
      }),
      dict({
        'component': 'BBB web',
        'matched_text': 'bbb-web',
        'sentence': 30,
      }),
      dict({
        'component': 'Redis PubSub',
        'matched_text': 'redis events',
        'sentence': 31,
      }),
      dict({
        'component': 'BBB web',
        'matched_text': 'BBB web',
        'sentence': 36,
      }),
      dict({
        'component': 'BBB web',
        'matched_text': 'BigBlueButton web application',
        'sentence': 37,
      }),
      dict({
        'component': 'Redis PubSub',
        'matched_text': 'Redis PubSub',
        'sentence': 46,
      }),
      dict({
        'component': 'Redis PubSub',
        'matched_text': 'Redis PubSub',
        'sentence': 47,
      }),
      dict({
        'component': 'Redis DB',
        'matched_text': 'Redis DB',
        'sentence': 48,
      }),
      dict({
        'component': 'Redis DB',
        'matched_text': 'Redis DB',
        'sentence': 49,
      }),
    ]),
  })
# ---
# name: test_extraction_parsed_snapshot[bigbluebutton-phase_2_framing_c_pass1-call1]
  dict({
    'references': list([
      dict({
        'component': 'Apps',
        'matched_text': 'Apps akka',
        'sentence': 51,
      }),
      dict({
        'component': 'Apps',
        'matched_text': 'BigBlueButton Apps',
        'sentence': 52,
      }),
      dict({
        'component': 'Apps',
        'matched_text': 'Apps Akka',
        'sentence': 54,
      }),
      dict({
        'component': 'FSESL',
        'matched_text': 'FSESL akka',
        'sentence': 57,
      }),
      dict({
        'component': 'FreeSWITCH',
        'matched_text': 'FreeSWITCH',
        'sentence': 58,
      }),
      dict({
        'component': 'FreeSWITCH',
        'matched_text': 'FreeSWITCH',
        'sentence': 59,
      }),
      dict({
        'component': 'Apps',
        'matched_text': 'apps',
        'sentence': 60,
      }),
      dict({
        'component': 'FSESL',
        'matched_text': 'FreeSWITCH Event Socket Layer',
        'sentence': 60,
      }),
      dict({
        'component': 'Redis PubSub',
        'matched_text': 'redis pubsub',
        'sentence': 60,
      }),
      dict({
        'component': 'FreeSWITCH',
        'matched_text': 'FreeSWITCH',
        'sentence': 61,
      }),
      dict({
        'component': 'FreeSWITCH',
        'matched_text': 'FreeSWITCH',
        'sentence': 62,
      }),
      dict({
        'component': 'FreeSWITCH',
        'matched_text': 'FreeSWITCH',
        'sentence': 63,
      }),
      dict({
        'component': 'FreeSWITCH',
        'matched_text': 'FreeSWITCH',
        'sentence': 66,
      }),
      dict({
        'component': 'kurento',
        'matched_text': 'Kurento',
        'sentence': 67,
      }),
      dict({
        'component': 'WebRTC-SFU',
        'matched_text': 'WebRTC-SFU',
        'sentence': 67,
      }),
      dict({
        'component': 'kurento',
        'matched_text': 'Kurento Media Server',
        'sentence': 68,
      }),
      dict({
        'component': 'kurento',
        'matched_text': 'KMS',
        'sentence': 68,
      }),
      dict({
        'component': 'kurento',
        'matched_text': 'KMS',
        'sentence': 69,
      }),
      dict({
        'component': 'WebRTC-SFU',
        'matched_text': 'WebRTC-SFU',
        'sentence': 70,
      }),
      dict({
        'component': 'FreeSWITCH',
        'matched_text': 'FreeSWITCH',
        'sentence': 72,
      }),
      dict({
        'component': 'HTML5 Client',
        'matched_text': 'BigBlueButton HTML5 client',
        'sentence': 72,
      }),
      dict({
        'component': 'HTML5 Client',
        'matched_text': 'BigBlueButton client',
        'sentence': 73,
      }),
      dict({
        'component': 'BBB web',
        'matched_text': 'bbb-web',
        'sentence': 78,
      }),
      dict({
        'component': 'HTML5 Client',
        'matched_text': 'client',
        'sentence': 79,
      }),
      dict({
        'component': 'Redis PubSub',
        'matched_text': 'Redis pubsub',
        'sentence': 79,
      }),
      dict({
        'component': 'Presentation Conversion',
        'matched_text': 'Presentation conversion',
        'sentence': 80,
      }),
      dict({
        'component': 'Presentation Conversion',
        'matched_text': 'presentation conversion',
        'sentence': 81,
      }),
      dict({
        'component': 'Apps',
        'matched_text': 'various components of BigBlueButton',
        'sentence': 87,
      }),
    ]),
  })
# ---
# name: test_extraction_parsed_snapshot[bigbluebutton-phase_2_framing_c_pass2-call0]
  dict({
    'references': list([
      dict({
        'component': 'HTML5 Client',
        'matched_text': 'HTML5 client',
        'sentence': 4,
      }),
      dict({
        'component': 'HTML5 Client',
        'matched_text': 'HTML5 client',
        'sentence': 5,
      }),
      dict({
        'component': 'HTML5 Client',
        'matched_text': 'HTML5 client',
        'sentence': 6,
      }),
      dict({
        'component': 'HTML5 Server',
        'matched_text': 'HTML5 server',
        'sentence': 8,
      }),
      dict({
        'component': 'HTML5 Server',
        'matched_text': 'HTML5 server',
        'sentence': 9,
      }),
      dict({
        'component': 'HTML5 Client',
        'matched_text': 'HTML5 client',
        'sentence': 14,
      }),
      dict({
        'component': 'HTML5 Server',
        'matched_text': 'HTML5 server',
        'sentence': 15,
      }),
      dict({
        'component': 'HTML5 Server',
        'matched_text': 'bbb-html5',
        'sentence': 19,
      }),
      dict({
        'component': 'HTML5 Server',
        'matched_text': 'bbb-html5',
        'sentence': 20,
      }),
      dict({
        'component': 'HTML5 Server',
        'matched_text': 'bbb-html5',
        'sentence': 21,
      }),
      dict({
        'component': 'Apps',
        'matched_text': 'akka-apps',
        'sentence': 26,
      }),
      dict({
        'component': 'BBB web',
        'matched_text': 'bbb-web',
        'sentence': 30,
      }),
      dict({
        'component': 'Redis PubSub',
        'matched_text': 'redis events',
        'sentence': 31,
      }),
      dict({
        'component': 'BBB web',
        'matched_text': 'BBB web',
        'sentence': 36,
      }),
      dict({
        'component': 'BBB web',
        'matched_text': 'BigBlueButton web application',
        'sentence': 37,
      }),
      dict({
        'component': 'Redis PubSub',
        'matched_text': 'Redis PubSub',
        'sentence': 46,
      }),
      dict({
        'component': 'Redis PubSub',
        'matched_text': 'Redis PubSub',
        'sentence': 47,
      }),
      dict({
        'component': 'Redis DB',
        'matched_text': 'Redis DB',
        'sentence': 48,
      }),
      dict({
        'component': 'Redis DB',
        'matched_text': 'Redis DB',
        'sentence': 49,
      }),
    ]),
  })
# ---
# name: test_extraction_parsed_snapshot[bigbluebutton-phase_2_framing_c_pass2-call1]
  dict({
    'references': list([
      dict({
        'component': 'Apps',
        'matched_text': 'Apps akka',
        'sentence': 51,
      }),
      dict({
        'component': 'Apps',
        'matched_text': 'BigBlueButton Apps',
        'sentence': 52,
      }),
      dict({
        'component': 'Apps',
        'matched_text': 'Apps Akka',
        'sentence': 54,
      }),
      dict({
        'component': 'FSESL',
        'matched_text': 'FSESL akka',
        'sentence': 57,
      }),
      dict({
        'component': 'FreeSWITCH',
        'matched_text': 'FreeSWITCH',
        'sentence': 58,
      }),
      dict({
        'component': 'FreeSWITCH',
        'matched_text': 'FreeSWITCH',
        'sentence': 59,
      }),
      dict({
        'component': 'Apps',
        'matched_text': 'apps',
        'sentence': 60,
      }),
      dict({
        'component': 'FSESL',
        'matched_text': 'FreeSWITCH Event Socket Layer',
        'sentence': 60,
      }),
      dict({
        'component': 'Redis PubSub',
        'matched_text': 'redis pubsub',
        'sentence': 60,
      }),
      dict({
        'component': 'FreeSWITCH',
        'matched_text': 'FreeSWITCH',
        'sentence': 61,
      }),
      dict({
        'component': 'FreeSWITCH',
        'matched_text': 'FreeSWITCH',
        'sentence': 62,
      }),
      dict({
        'component': 'FreeSWITCH',
        'matched_text': 'FreeSWITCH',
        'sentence': 63,
      }),
      dict({
        'component': 'FreeSWITCH',
        'matched_text': 'FreeSWITCH',
        'sentence': 66,
      }),
      dict({
        'component': 'kurento',
        'matched_text': 'Kurento',
        'sentence': 67,
      }),
      dict({
        'component': 'WebRTC-SFU',
        'matched_text': 'WebRTC-SFU',
        'sentence': 67,
      }),
      dict({
        'component': 'kurento',
        'matched_text': 'Kurento Media Server',
        'sentence': 68,
      }),
      dict({
        'component': 'kurento',
        'matched_text': 'KMS',
        'sentence': 68,
      }),
      dict({
        'component': 'kurento',
        'matched_text': 'KMS',
        'sentence': 69,
      }),
      dict({
        'component': 'WebRTC-SFU',
        'matched_text': 'WebRTC-SFU',
        'sentence': 70,
      }),
      dict({
        'component': 'FreeSWITCH',
        'matched_text': 'FreeSWITCH',
        'sentence': 72,
      }),
      dict({
        'component': 'HTML5 Client',
        'matched_text': 'BigBlueButton HTML5 client',
        'sentence': 72,
      }),
      dict({
        'component': 'HTML5 Client',
        'matched_text': 'BigBlueButton client',
        'sentence': 73,
      }),
      dict({
        'component': 'BBB web',
        'matched_text': 'bbb-web',
        'sentence': 78,
      }),
      dict({
        'component': 'Redis PubSub',
        'matched_text': 'Redis pubsub',
        'sentence': 79,
      }),
      dict({
        'component': 'Presentation Conversion',
        'matched_text': 'Presentation conversion',
        'sentence': 80,
      }),
      dict({
        'component': 'Presentation Conversion',
        'matched_text': 'presentation conversion',
        'sentence': 81,
      }),
    ]),
  })
# ---
# name: test_extraction_parsed_snapshot[jabref-phase_2_framing_c_pass1-call0]
  dict({
    'references': list([
      dict({
        'component': 'model',
        'matched_text': 'model',
        'sentence': 1,
      }),
      dict({
        'component': 'logic',
        'matched_text': 'logic',
        'sentence': 1,
      }),
      dict({
        'component': 'gui',
        'matched_text': 'gui',
        'sentence': 1,
      }),
      dict({
        'component': 'preferences',
        'matched_text': 'preferences',
        'sentence': 2,
      }),
      dict({
        'component': 'cli',
        'matched_text': 'cli',
        'sentence': 2,
      }),
      dict({
        'component': 'logic',
        'matched_text': 'logic',
        'sentence': 4,
      }),
      dict({
        'component': 'model',
        'matched_text': 'model',
        'sentence': 4,
      }),
      dict({
        'component': 'gui',
        'matched_text': 'gui',
        'sentence': 4,
      }),
      dict({
        'component': 'model',
        'matched_text': 'model',
        'sentence': 5,
      }),
      dict({
        'component': 'logic',
        'matched_text': 'logic',
        'sentence': 5,
      }),
      dict({
        'component': 'logic',
        'matched_text': 'logic',
        'sentence': 6,
      }),
      dict({
        'component': 'model',
        'matched_text': 'model',
        'sentence': 6,
      }),
      dict({
        'component': 'gui',
        'matched_text': 'gui',
        'sentence': 6,
      }),
      dict({
        'component': 'gui',
        'matched_text': 'gui',
        'sentence': 7,
      }),
      dict({
        'component': 'preferences',
        'matched_text': 'preferences',
        'sentence': 7,
      }),
      dict({
        'component': 'model',
        'matched_text': 'model',
        'sentence': 9,
      }),
      dict({
        'component': 'logic',
        'matched_text': 'logic',
        'sentence': 9,
      }),
      dict({
        'component': 'model',
        'matched_text': 'model',
        'sentence': 9,
      }),
      dict({
        'component': 'cli',
        'matched_text': 'cli',
        'sentence': 10,
      }),
      dict({
        'component': 'cli',
        'matched_text': 'command line interface',
        'sentence': 10,
      }),
      dict({
        'component': 'preferences',
        'matched_text': 'preferences',
        'sentence': 11,
      }),
      dict({
        'component': 'model',
        'matched_text': 'model',
        'sentence': 12,
      }),
    ]),
  })
# ---
# name: test_extraction_parsed_snapshot[jabref-phase_2_framing_c_pass2-call0]
  dict({
    'references': list([
      dict({
        'component': 'model',
        'matched_text': 'model',
        'sentence': 1,
      }),
      dict({
        'component': 'logic',
        'matched_text': 'logic',
        'sentence': 1,
      }),
      dict({
        'component': 'gui',
        'matched_text': 'gui',
        'sentence': 1,
      }),
      dict({
        'component': 'preferences',
        'matched_text': 'preferences',
        'sentence': 2,
      }),
      dict({
        'component': 'cli',
        'matched_text': 'cli',
        'sentence': 2,
      }),
      dict({
        'component': 'logic',
        'matched_text': 'logic',
        'sentence': 4,
      }),
      dict({
        'component': 'model',
        'matched_text': 'model',
        'sentence': 4,
      }),
      dict({
        'component': 'gui',
        'matched_text': 'gui',
        'sentence': 4,
      }),
      dict({
        'component': 'model',
        'matched_text': 'model',
        'sentence': 5,
      }),
      dict({
        'component': 'logic',
        'matched_text': 'logic',
        'sentence': 5,
      }),
      dict({
        'component': 'logic',
        'matched_text': 'logic',
        'sentence': 6,
      }),
      dict({
        'component': 'model',
        'matched_text': 'model',
        'sentence': 6,
      }),
      dict({
        'component': 'gui',
        'matched_text': 'gui',
        'sentence': 6,
      }),
      dict({
        'component': 'gui',
        'matched_text': 'gui',
        'sentence': 7,
      }),
      dict({
        'component': 'preferences',
        'matched_text': 'preferences',
        'sentence': 7,
      }),
      dict({
        'component': 'model',
        'matched_text': 'model',
        'sentence': 9,
      }),
      dict({
        'component': 'logic',
        'matched_text': 'logic',
        'sentence': 9,
      }),
      dict({
        'component': 'model',
        'matched_text': 'model',
        'sentence': 9,
      }),
      dict({
        'component': 'cli',
        'matched_text': 'cli',
        'sentence': 10,
      }),
      dict({
        'component': 'cli',
        'matched_text': 'command line interface',
        'sentence': 10,
      }),
      dict({
        'component': 'preferences',
        'matched_text': 'preferences',
        'sentence': 11,
      }),
      dict({
        'component': 'model',
        'matched_text': 'model',
        'sentence': 12,
      }),
    ]),
  })
# ---
# name: test_extraction_parsed_snapshot[mediastore-phase_2_framing_c_pass1-call0]
  dict({
    'references': list([
      dict({
        'component': 'Facade',
        'matched_text': 'Facade component',
        'sentence': 1,
      }),
      dict({
        'component': 'Facade',
        'matched_text': 'Facade component',
        'sentence': 3,
      }),
      dict({
        'component': 'Facade',
        'matched_text': 'Facade component',
        'sentence': 6,
      }),
      dict({
        'component': 'MediaManagement',
        'matched_text': 'MediaManagement component',
        'sentence': 7,
      }),
      dict({
        'component': 'MediaManagement',
        'matched_text': 'MediaManagement component',
        'sentence': 8,
      }),
      dict({
        'component': 'UserManagement',
        'matched_text': 'UserManagement component',
        'sentence': 11,
      }),
      dict({
        'component': 'UserDBAdapter',
        'matched_text': 'UserDBAdapter component',
        'sentence': 12,
      }),
      dict({
        'component': 'UserManagement',
        'matched_text': 'UserManagement component',
        'sentence': 13,
      }),
      dict({
        'component': 'TagWatermarking',
        'matched_text': 'TagWatermarking component',
        'sentence': 16,
      }),
      dict({
        'component': 'MediaManagement',
        'matched_text': 'MediaManagement component',
        'sentence': 17,
      }),
      dict({
        'component': 'TagWatermarking',
        'matched_text': 'TagWatermarking component',
        'sentence': 17,
      }),
      dict({
        'component': 'Packaging',
        'matched_text': 'Packaging component',
        'sentence': 19,
      }),
      dict({
        'component': 'Reencoding',
        'matched_text': 'ReEncoder component',
        'sentence': 20,
      }),
      dict({
        'component': 'DB',
        'matched_text': 'Database component',
        'sentence': 23,
      }),
      dict({
        'component': 'DB',
        'matched_text': 'Database component',
        'sentence': 25,
      }),
      dict({
        'component': 'MediaAccess',
        'matched_text': 'MediaAccess component',
        'sentence': 26,
      }),
      dict({
        'component': 'MediaAccess',
        'matched_text': 'MediaAccess component',
        'sentence': 27,
      }),
      dict({
        'component': 'UserDBAdapter',
        'matched_text': 'UserDBAdapter component',
        'sentence': 29,
      }),
      dict({
        'component': 'UserDBAdapter',
        'matched_text': 'UserDBAdapter component',
        'sentence': 30,
      }),
      dict({
        'component': 'DB',
        'matched_text': 'Database component',
        'sentence': 31,
      }),
      dict({
        'component': 'DB',
        'matched_text': 'Database component',
        'sentence': 32,
      }),
      dict({
        'component': 'FileStorage',
        'matched_text': 'DataStorage',
        'sentence': 33,
      }),
      dict({
        'component': 'MediaAccess',
        'matched_text': 'MediaAccess component',
        'sentence': 34,
      }),
      dict({
        'component': 'DB',
        'matched_text': 'Database',
        'sentence': 34,
      }),
      dict({
        'component': 'FileStorage',
        'matched_text': 'DataStorage',
        'sentence': 35,
      }),
      dict({
        'component': 'FileStorage',
        'matched_text': 'DataStorage',
        'sentence': 36,
      }),
      dict({
        'component': 'Reencoding',
        'matched_text': 're-encoding',
        'sentence': 37,
      }),
    ]),
  })
# ---
# name: test_extraction_parsed_snapshot[mediastore-phase_2_framing_c_pass2-call0]
  dict({
    'references': list([
      dict({
        'component': 'Facade',
        'matched_text': 'Facade component',
        'sentence': 1,
      }),
      dict({
        'component': 'Facade',
        'matched_text': 'Facade component',
        'sentence': 3,
      }),
      dict({
        'component': 'Facade',
        'matched_text': 'Facade component',
        'sentence': 6,
      }),
      dict({
        'component': 'MediaManagement',
        'matched_text': 'MediaManagement component',
        'sentence': 7,
      }),
      dict({
        'component': 'MediaManagement',
        'matched_text': 'MediaManagement component',
        'sentence': 8,
      }),
      dict({
        'component': 'UserManagement',
        'matched_text': 'UserManagement component',
        'sentence': 11,
      }),
      dict({
        'component': 'UserDBAdapter',
        'matched_text': 'UserDBAdapter component',
        'sentence': 12,
      }),
      dict({
        'component': 'UserManagement',
        'matched_text': 'UserManagement component',
        'sentence': 13,
      }),
      dict({
        'component': 'TagWatermarking',
        'matched_text': 'TagWatermarking component',
        'sentence': 16,
      }),
      dict({
        'component': 'MediaManagement',
        'matched_text': 'MediaManagement component',
        'sentence': 17,
      }),
      dict({
        'component': 'TagWatermarking',
        'matched_text': 'TagWatermarking component',
        'sentence': 17,
      }),
      dict({
        'component': 'Packaging',
        'matched_text': 'Packaging component',
        'sentence': 19,
      }),
      dict({
        'component': 'Reencoding',
        'matched_text': 'ReEncoder component',
        'sentence': 20,
      }),
      dict({
        'component': 'DB',
        'matched_text': 'Database component',
        'sentence': 23,
      }),
      dict({
        'component': 'DB',
        'matched_text': 'Database component',
        'sentence': 25,
      }),
      dict({
        'component': 'MediaAccess',
        'matched_text': 'MediaAccess component',
        'sentence': 26,
      }),
      dict({
        'component': 'MediaAccess',
        'matched_text': 'MediaAccess component',
        'sentence': 27,
      }),
      dict({
        'component': 'UserDBAdapter',
        'matched_text': 'UserDBAdapter component',
        'sentence': 29,
      }),
      dict({
        'component': 'UserDBAdapter',
        'matched_text': 'UserDBAdapter component',
        'sentence': 30,
      }),
      dict({
        'component': 'DB',
        'matched_text': 'Database component',
        'sentence': 31,
      }),
      dict({
        'component': 'DB',
        'matched_text': 'Database component',
        'sentence': 32,
      }),
      dict({
        'component': 'FileStorage',
        'matched_text': 'DataStorage',
        'sentence': 33,
      }),
      dict({
        'component': 'MediaAccess',
        'matched_text': 'MediaAccess component',
        'sentence': 34,
      }),
      dict({
        'component': 'DB',
        'matched_text': 'Database',
        'sentence': 34,
      }),
      dict({
        'component': 'FileStorage',
        'matched_text': 'DataStorage',
        'sentence': 35,
      }),
      dict({
        'component': 'FileStorage',
        'matched_text': 'DataStorage',
        'sentence': 36,
      }),
      dict({
        'component': 'Reencoding',
        'matched_text': 're-encoding',
        'sentence': 37,
      }),
    ]),
  })
# ---
# name: test_extraction_parsed_snapshot[teammates-phase_2_framing_c_pass1-call0]
  dict({
    'references': list([
      dict({
        'component': 'UI',
        'matched_text': 'UI Component',
        'sentence': 1,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'Logic Component',
        'sentence': 1,
      }),
      dict({
        'component': 'Storage',
        'matched_text': 'Storage Component',
        'sentence': 1,
      }),
      dict({
        'component': 'Common',
        'matched_text': 'Common Component',
        'sentence': 1,
      }),
      dict({
        'component': 'Test Driver',
        'matched_text': 'Test Driver Component',
        'sentence': 1,
      }),
      dict({
        'component': 'E2E',
        'matched_text': 'E2E Component',
        'sentence': 1,
      }),
      dict({
        'component': 'Client',
        'matched_text': 'Client Component',
        'sentence': 1,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'UI Browser',
        'sentence': 4,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'UI',
        'sentence': 5,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'UI Server',
        'sentence': 7,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE Datastore',
        'sentence': 9,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'NoSQL database',
        'sentence': 9,
      }),
      dict({
        'component': 'Test Driver',
        'matched_text': 'Test Driver',
        'sentence': 10,
      }),
      dict({
        'component': 'E2E',
        'matched_text': 'E2E',
        'sentence': 15,
      }),
      dict({
        'component': 'E2E',
        'matched_text': 'E2E end-to-end component',
        'sentence': 15,
      }),
      dict({
        'component': 'E2E',
        'matched_text': 'E2E tests',
        'sentence': 16,
      }),
      dict({
        'component': 'E2E',
        'matched_text': 'E2E testing',
        'sentence': 17,
      }),
      dict({
        'component': 'Client',
        'matched_text': 'Client component',
        'sentence': 18,
      }),
      dict({
        'component': 'Common',
        'matched_text': 'Common component',
        'sentence': 20,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'front-end',
        'sentence': 24,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'UI component',
        'sentence': 25,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'UI component',
        'sentence': 29,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE server',
        'sentence': 31,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE server-invoked',
        'sentence': 35,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'Logic component',
        'sentence': 47,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'front-end',
        'sentence': 50,
      }),
    ]),
  })
# ---
# name: test_extraction_parsed_snapshot[teammates-phase_2_framing_c_pass1-call1]
  dict({
    'references': list([
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE server',
        'sentence': 58,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE server',
        'sentence': 62,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'Logic component',
        'sentence': 68,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE server',
        'sentence': 69,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE',
        'sentence': 73,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE',
        'sentence': 73,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE',
        'sentence': 74,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'Logic component',
        'sentence': 77,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'UI component',
        'sentence': 81,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'UI',
        'sentence': 85,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'Logic API',
        'sentence': 87,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'Logic',
        'sentence': 88,
      }),
      dict({
        'component': 'Storage',
        'matched_text': 'Storage component',
        'sentence': 88,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'UI',
        'sentence': 97,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'Logic',
        'sentence': 97,
      }),
    ]),
  })
# ---
# name: test_extraction_parsed_snapshot[teammates-phase_2_framing_c_pass1-call2]
  dict({
    'references': list([
      dict({
        'component': 'Storage',
        'matched_text': 'Storage level',
        'sentence': 101,
      }),
      dict({
        'component': 'Storage',
        'matched_text': 'Storage component',
        'sentence': 118,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'Logic component',
        'sentence': 122,
      }),
      dict({
        'component': 'Storage',
        'matched_text': 'Storage component',
        'sentence': 123,
      }),
      dict({
        'component': 'Storage',
        'matched_text': 'Storage component',
        'sentence': 128,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'Logic component',
        'sentence': 129,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'logic component',
        'sentence': 131,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE Datastore',
        'sentence': 137,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': "Google's distributed datastore",
        'sentence': 141,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE environment',
        'sentence': 144,
      }),
    ]),
  })
# ---
# name: test_extraction_parsed_snapshot[teammates-phase_2_framing_c_pass1-call3]
  dict({
    'references': list([
      dict({
        'component': 'Common',
        'matched_text': 'Common component',
        'sentence': 155,
      }),
      dict({
        'component': 'Common',
        'matched_text': 'components',
        'sentence': 160,
      }),
      dict({
        'component': 'Common',
        'matched_text': 'components',
        'sentence': 161,
      }),
      dict({
        'component': 'Test Driver',
        'matched_text': 'Test Driver',
        'sentence': 163,
      }),
      dict({
        'component': 'Test Driver',
        'matched_text': 'This component',
        'sentence': 168,
      }),
      dict({
        'component': 'Common',
        'matched_text': 'Common component',
        'sentence': 174,
      }),
      dict({
        'component': 'Common',
        'matched_text': 'Common component',
        'sentence': 175,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'Logic component',
        'sentence': 176,
      }),
      dict({
        'component': 'Storage',
        'matched_text': 'Storage component',
        'sentence': 177,
      }),
      dict({
        'component': 'Common',
        'matched_text': 'Component',
        'sentence': 181,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'Component',
        'sentence': 181,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'component',
        'sentence': 181,
      }),
      dict({
        'component': 'Storage',
        'matched_text': 'component',
        'sentence': 181,
      }),
      dict({
        'component': 'Test Driver',
        'matched_text': 'Component',
        'sentence': 181,
      }),
      dict({
        'component': 'E2E',
        'matched_text': 'component',
        'sentence': 181,
      }),
      dict({
        'component': 'Client',
        'matched_text': 'component',
        'sentence': 181,
      }),
      dict({
        'component': 'E2E',
        'matched_text': 'E2E component',
        'sentence': 185,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'Web browser',
        'sentence': 185,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'back-end logic',
        'sentence': 185,
      }),
      dict({
        'component': 'E2E',
        'matched_text': 'E2E',
        'sentence': 186,
      }),
      dict({
        'component': 'Client',
        'matched_text': 'Client component',
        'sentence': 194,
      }),
    ]),
  })
# ---
# name: test_extraction_parsed_snapshot[teammates-phase_2_framing_c_pass2-call0]
  dict({
    'references': list([
      dict({
        'component': 'UI',
        'matched_text': 'UI Component',
        'sentence': 1,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'Logic Component',
        'sentence': 1,
      }),
      dict({
        'component': 'Storage',
        'matched_text': 'Storage Component',
        'sentence': 1,
      }),
      dict({
        'component': 'Common',
        'matched_text': 'Common Component',
        'sentence': 1,
      }),
      dict({
        'component': 'Test Driver',
        'matched_text': 'Test Driver Component',
        'sentence': 1,
      }),
      dict({
        'component': 'E2E',
        'matched_text': 'E2E Component',
        'sentence': 1,
      }),
      dict({
        'component': 'Client',
        'matched_text': 'Client Component',
        'sentence': 1,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'UI Browser',
        'sentence': 4,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'UI',
        'sentence': 5,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'UI Server',
        'sentence': 7,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE Datastore',
        'sentence': 9,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'NoSQL database',
        'sentence': 9,
      }),
      dict({
        'component': 'Test Driver',
        'matched_text': 'Test Driver',
        'sentence': 10,
      }),
      dict({
        'component': 'E2E',
        'matched_text': 'E2E',
        'sentence': 15,
      }),
      dict({
        'component': 'E2E',
        'matched_text': 'E2E end-to-end component',
        'sentence': 15,
      }),
      dict({
        'component': 'E2E',
        'matched_text': 'E2E tests',
        'sentence': 16,
      }),
      dict({
        'component': 'E2E',
        'matched_text': 'E2E testing',
        'sentence': 17,
      }),
      dict({
        'component': 'Client',
        'matched_text': 'Client component',
        'sentence': 18,
      }),
      dict({
        'component': 'Common',
        'matched_text': 'Common component',
        'sentence': 20,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'front-end',
        'sentence': 24,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'UI component',
        'sentence': 25,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'UI component',
        'sentence': 29,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE server',
        'sentence': 31,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE server-invoked',
        'sentence': 35,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'Logic component',
        'sentence': 47,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'front-end',
        'sentence': 50,
      }),
    ]),
  })
# ---
# name: test_extraction_parsed_snapshot[teammates-phase_2_framing_c_pass2-call1]
  dict({
    'references': list([
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE server',
        'sentence': 58,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE server',
        'sentence': 62,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'Logic component',
        'sentence': 68,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE server',
        'sentence': 69,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE',
        'sentence': 73,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE',
        'sentence': 73,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE',
        'sentence': 74,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'Logic component',
        'sentence': 77,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'UI component',
        'sentence': 81,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'UI',
        'sentence': 85,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'Logic API',
        'sentence': 87,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'Logic',
        'sentence': 88,
      }),
      dict({
        'component': 'Storage',
        'matched_text': 'Storage component',
        'sentence': 88,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'UI',
        'sentence': 97,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'Logic',
        'sentence': 97,
      }),
    ]),
  })
# ---
# name: test_extraction_parsed_snapshot[teammates-phase_2_framing_c_pass2-call2]
  dict({
    'references': list([
      dict({
        'component': 'Storage',
        'matched_text': 'Storage level',
        'sentence': 101,
      }),
      dict({
        'component': 'Storage',
        'matched_text': 'The Storage component',
        'sentence': 118,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'datastore',
        'sentence': 122,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'Logic component',
        'sentence': 122,
      }),
      dict({
        'component': 'Storage',
        'matched_text': 'Storage component',
        'sentence': 123,
      }),
      dict({
        'component': 'Storage',
        'matched_text': 'Storage component',
        'sentence': 128,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'Logic component',
        'sentence': 129,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'logic component',
        'sentence': 131,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE Datastore',
        'sentence': 137,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'datastore',
        'sentence': 138,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE production environment',
        'sentence': 139,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': "Google's distributed datastore",
        'sentence': 141,
      }),
      dict({
        'component': 'GAE Datastore',
        'matched_text': 'GAE environment',
        'sentence': 144,
      }),
    ]),
  })
# ---
# name: test_extraction_parsed_snapshot[teammates-phase_2_framing_c_pass2-call3]
  dict({
    'references': list([
      dict({
        'component': 'Common',
        'matched_text': 'Common component',
        'sentence': 155,
      }),
      dict({
        'component': 'Common',
        'matched_text': 'components',
        'sentence': 160,
      }),
      dict({
        'component': 'Common',
        'matched_text': 'components',
        'sentence': 161,
      }),
      dict({
        'component': 'Test Driver',
        'matched_text': 'Test Driver',
        'sentence': 163,
      }),
      dict({
        'component': 'Test Driver',
        'matched_text': 'This component',
        'sentence': 168,
      }),
      dict({
        'component': 'Common',
        'matched_text': 'Common component',
        'sentence': 174,
      }),
      dict({
        'component': 'Common',
        'matched_text': 'Common component',
        'sentence': 175,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'Logic component',
        'sentence': 176,
      }),
      dict({
        'component': 'Storage',
        'matched_text': 'Storage component',
        'sentence': 177,
      }),
      dict({
        'component': 'Common',
        'matched_text': 'Component',
        'sentence': 181,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'Component',
        'sentence': 181,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'component',
        'sentence': 181,
      }),
      dict({
        'component': 'Storage',
        'matched_text': 'component',
        'sentence': 181,
      }),
      dict({
        'component': 'Test Driver',
        'matched_text': 'Component',
        'sentence': 181,
      }),
      dict({
        'component': 'E2E',
        'matched_text': 'component',
        'sentence': 181,
      }),
      dict({
        'component': 'Client',
        'matched_text': 'component',
        'sentence': 181,
      }),
      dict({
        'component': 'E2E',
        'matched_text': 'E2E component',
        'sentence': 185,
      }),
      dict({
        'component': 'UI',
        'matched_text': 'Web browser',
        'sentence': 185,
      }),
      dict({
        'component': 'Logic',
        'matched_text': 'back-end logic',
        'sentence': 185,
      }),
      dict({
        'component': 'E2E',
        'matched_text': 'E2E',
        'sentence': 186,
      }),
      dict({
        'component': 'Client',
        'matched_text': 'Client component',
        'sentence': 194,
      }),
    ]),
  })
# ---
# name: test_extraction_parsed_snapshot[teastore-phase_2_framing_c_pass1-call0]
  dict({
    'references': list([
      dict({
        'component': 'Registry',
        'matched_text': 'Registry',
        'sentence': 1,
      }),
      dict({
        'component': 'WebUI',
        'matched_text': 'WebUI',
        'sentence': 2,
      }),
      dict({
        'component': 'ImageProvider',
        'matched_text': 'Image Provider',
        'sentence': 2,
      }),
      dict({
        'component': 'Auth',
        'matched_text': 'Auth',
        'sentence': 3,
      }),
      dict({
        'component': 'Persistence',
        'matched_text': 'PersistenceProvider',
        'sentence': 4,
      }),
      dict({
        'component': 'Recommender',
        'matched_text': 'Recommender',
        'sentence': 4,
      }),
      dict({
        'component': 'WebUI',
        'matched_text': 'WebUI',
        'sentence': 5,
      }),
      dict({
        'component': 'WebUI',
        'matched_text': 'front-end',
        'sentence': 5,
      }),
      dict({
        'component': 'WebUI',
        'matched_text': 'WebUi',
        'sentence': 7,
      }),
      dict({
        'component': 'ImageProvider',
        'matched_text': 'Image Provider',
        'sentence': 7,
      }),
      dict({
        'component': 'WebUI',
        'matched_text': 'UI',
        'sentence': 8,
      }),
      dict({
        'component': 'ImageProvider',
        'matched_text': 'Image Provider',
        'sentence': 10,
      }),
      dict({
        'component': 'WebUI',
        'matched_text': 'WebUI',
        'sentence': 10,
      }),
      dict({
        'component': 'ImageProvider',
        'matched_text': 'Image Provider',
        'sentence': 12,
      }),
      dict({
        'component': 'Auth',
        'matched_text': 'Auth',
        'sentence': 18,
      }),
      dict({
        'component': 'Persistence',
        'matched_text': 'Persistence',
        'sentence': 22,
      }),
      dict({
        'component': 'Persistence',
        'matched_text': 'persistence provider',
        'sentence': 25,
      }),
      dict({
        'component': 'Recommender',
        'matched_text': 'Recommender',
        'sentence': 27,
      }),
      dict({
        'component': 'SlopeOneRecommender',
        'matched_text': 'Slope One',
        'sentence': 32,
      }),
      dict({
        'component': 'OrderBasedRecommender',
        'matched_text': 'order-based nearest-neighbor approach',
        'sentence': 35,
      }),
      dict({
        'component': 'Registry',
        'matched_text': 'Registry',
        'sentence': 37,
      }),
      dict({
        'component': 'Registry',
        'matched_text': 'registry',
        'sentence': 38,
      }),
      dict({
        'component': 'Registry',
        'matched_text': 'registry',
        'sentence': 41,
      }),
      dict({
        'component': 'Registry',
        'matched_text': 'registry',
        'sentence': 43,
      }),
    ]),
  })
# ---
# name: test_extraction_parsed_snapshot[teastore-phase_2_framing_c_pass2-call0]
  dict({
    'references': list([
      dict({
        'component': 'Registry',
        'matched_text': 'Registry',
        'sentence': 1,
      }),
      dict({
        'component': 'WebUI',
        'matched_text': 'WebUI',
        'sentence': 2,
      }),
      dict({
        'component': 'ImageProvider',
        'matched_text': 'Image Provider',
        'sentence': 2,
      }),
      dict({
        'component': 'Auth',
        'matched_text': 'Auth',
        'sentence': 3,
      }),
      dict({
        'component': 'Persistence',
        'matched_text': 'PersistenceProvider',
        'sentence': 4,
      }),
      dict({
        'component': 'Recommender',
        'matched_text': 'Recommender',
        'sentence': 4,
      }),
      dict({
        'component': 'WebUI',
        'matched_text': 'WebUI',
        'sentence': 5,
      }),
      dict({
        'component': 'WebUI',
        'matched_text': 'front-end',
        'sentence': 5,
      }),
      dict({
        'component': 'WebUI',
        'matched_text': 'WebUi',
        'sentence': 7,
      }),
      dict({
        'component': 'ImageProvider',
        'matched_text': 'Image Provider',
        'sentence': 7,
      }),
      dict({
        'component': 'WebUI',
        'matched_text': 'UI',
        'sentence': 8,
      }),
      dict({
        'component': 'ImageProvider',
        'matched_text': 'Image Provider',
        'sentence': 10,
      }),
      dict({
        'component': 'WebUI',
        'matched_text': 'WebUI',
        'sentence': 10,
      }),
      dict({
        'component': 'ImageProvider',
        'matched_text': 'Image Provider',
        'sentence': 12,
      }),
      dict({
        'component': 'Auth',
        'matched_text': 'Auth',
        'sentence': 18,
      }),
      dict({
        'component': 'Persistence',
        'matched_text': 'Persistence',
        'sentence': 22,
      }),
      dict({
        'component': 'Persistence',
        'matched_text': 'persistence provider',
        'sentence': 25,
      }),
      dict({
        'component': 'Recommender',
        'matched_text': 'Recommender',
        'sentence': 27,
      }),
      dict({
        'component': 'SlopeOneRecommender',
        'matched_text': 'Slope One',
        'sentence': 32,
      }),
      dict({
        'component': 'OrderBasedRecommender',
        'matched_text': 'order-based nearest-neighbor approach',
        'sentence': 35,
      }),
      dict({
        'component': 'Registry',
        'matched_text': 'Registry',
        'sentence': 37,
      }),
      dict({
        'component': 'Registry',
        'matched_text': 'registry',
        'sentence': 38,
      }),
      dict({
        'component': 'Registry',
        'matched_text': 'registry',
        'sentence': 41,
      }),
      dict({
        'component': 'Registry',
        'matched_text': 'registry',
        'sentence': 43,
      }),
    ]),
  })
# ---
